refactor: Replace toastr with alertify.js

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -4,8 +4,9 @@
 @import "textae-editor-type-pallet.less";
 @import "modules/font-awesome.less";
 @import "modules/jquery-ui.min.less";
-@import "modules/toastr.min.less";
 @import "textae-editor.less";
+@import (less) "../../../node_modules/alertifyjs/build/css/alertify.css";
+@import (less) "../../../node_modules/alertifyjs/build/css/themes/default.css";
 @import (less) "../../../node_modules/jsondiffpatch/public/formatters-styles/html.css";
 
 .textae-editor,
