feature: Shorten attribute label URLs, just like type labels

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -209,7 +209,8 @@
     }
   }
 
-  &--editable &__type-label a {
+  &--editable &__type-label a,
+  &--editable &__attribute-label a {
     color: black;
     pointer-events: none;
     text-decoration: none;
