feature: Remove values from an attribute definition

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -234,7 +234,8 @@
     }
   }
 
-  &__remove {
+  &__remove,
+  &__remove-value {
     &:before {
       .fontAwesomeIcon("\f1f8");
       left: -1px;
