feature: Add new value to attribute definition

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -360,4 +360,10 @@
       }
     }
   }
+
+  &__add-value-to-attribute-dialog {
+    &__ok-button[disabled="disabled"] {
+      opacity: 0.1;
+    }
+  }
 }
