feature: Change value of attribute definition

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -218,7 +218,8 @@
     }
   }
 
-  &__edit-type {
+  &__edit-type,
+  &__edit-value {
     &:before {
       .fontAwesomeIcon("\f040");
       left: -1px;
