feature: Set the width of the button column in the attribute tab

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -160,9 +160,14 @@
     height: 27px;
   }
 
-  &__table-buttons {
+  &__table-buttons,
+  &__table-attribute-buttons {
     padding: 2px;
     text-align: center;
+  }
+
+  &__table-attribute-buttons {
+    width: 60px;
   }
 
   &__default-icon {
