feature: Change the value of the selection attribute from the palette

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -143,6 +143,7 @@
 
   &__label,
   &__attribute-label,
+  &__selection-attribute-label,
   &__short-label,
   &__no-config {
     overflow-x: hidden;
