feature: Display the number of selected entities on the palette

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -50,7 +50,12 @@
 
   &__title {
     font-size: 1.4em;
+    margin-bottom: -3px;
     margin-right: 10px;
+
+    &__selected-entity-label {
+      font-size: small;
+    }
   }
 
   &__lock-icon {
@@ -85,7 +90,7 @@
     line-height: 30px;
     margin-bottom: 0;
     margin-left: -1px;
-    margin-top: 20px;
+    margin-top: 25px;
     overflow: hidden;
     text-align: center;
     width: 59px;
