--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -18,7 +18,7 @@
 
 .textae-editor {
   position: relative;
-  padding: 2px;
+  padding: 2px 0;
 
   &:focus {
     outline-style: none;
@@ -62,6 +62,7 @@
       /* prefer calculated line height */
       p {
         line-height: inherit;
+        padding: 0 16px;
       }
 
       &__paragraph {
