feature: Add an attribute edit button to the type edit dialog

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -168,8 +168,13 @@
         }
       }
 
+      &__edit,
       &__remove {
         padding-top: 11px;
+      }
+
+      &__edit__value[disabled="disabled"] {
+        opacity: 0.1;
       }
     }
 
